--- a/src/CSS/FCProduct.css
+++ b/src/CSS/FCProduct.css
@@ -1,6 +1,58 @@
-.product-card {
-    border: 1px solid #ccc;
-    padding: 10px;
-    border-radius: 5px;
+.card {
     margin: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    flex: 1; /* Make each card take up equal space */
+    display: flex; /* Ensure child elements stretch to full height */
+    flex-direction: column; /* Ensure child elements stack vertically */
+}
+
+
+@media (max-width: 768px) {
+    .card {
+        width: 30%;
+    }
+
+    .main-img {
+        max-width: 100%;
+        height: 20px;
+    }
+}
+
+.card p {
+    font-size: 10px;
+    color: #666;
+}
+
+.card span {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.main-img {
+    max-width: 100%;
+    height: 200px;
+    border-radius: 5px;
+}
+
+.small-img {
+    border-radius: 5px;
+    max-width: 20%;
+    padding: 3%;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+}
+
+.row.justify-content-center {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.row.justify-content-center.row-cols-sm-4 {
+    height: 500px;
+    width: 100%;
+    padding-bottom: 10%;
 }
